--- a/1_orientation/2_data_science/code/dashboard.Rmd
+++ b/1_orientation/2_data_science/code/dashboard.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Day 1 mini-project"
-author: "By Anonymous Analyst Extraordinaire"
+author: "Louis Raison & Pierre-Henri Ramirez"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
@@ -44,45 +44,70 @@ listings <- clean_prices(listings)
 calendar <- clean_prices(calendar)
 ```
 
-# A First Tab
-
-Column {data-width=650}
------------------------------------------------------------------------
-
-### A map! 
+# Average Disponibility per neighbourhood
 
 ```{r box_1}
 
-library(ggmap)
+listings %>%
+  left_join(calendar,
+            by = c('id' = 'listing_id'))%>%
+  group_by(neighbourhood) %>%
+  summarise(availability_avg = mean(available)) %>%
+  arrange((availability_avg))%>%
+  head(5)
 
-boston_coords <- c(left   = -71.1289, 
-				   bottom = 42.3201, 
-				   right  = -71.0189, 
-				   top    = 42.3701)
 
-basemap <- get_map(location = boston_coords,
-				maptype = 'terrain')
-
-ggmap(basemap) + 
-	geom_point(aes(x = longitude, y = latitude), 
-			   data = listings, 
-			   size = .5)
 ```
 
-Column {data-width=350}
+
+One indicator which we thought of is the average availability. Indeed, the locations in the most wanted neighbourhoods will be more demanded than the others. Making the inverse of the availability a good indicator of neighbourhoods' attractiveness. Find Above the top five neighbourhoods in terms of that indicator.
+
+# Price Variation Over Time
+
+
+Column {data-width=500}
 -----------------------------------------------------------------------
 
-### Box 2
+### Average variation of the prices in Boston
 
-Frequently, visualization for decision-makers are most useful when accompanied by analysis, interpretation, and sometimes a recommendation by the analyst. Feel free to fill in your own commentary on your visualizations in this box or the one below. You can leave the `R` code chunk blank for your commentary box. 
-
-```{r box_2}
-
+```{r box_4}
+calendar %>%
+    group_by(date) %>%
+    summarise(avg_price = mean(price)) %>%
+    ggplot() +
+    aes(x = date, y= avg_price) +
+    geom_line() +
+    theme_bw()
 ```
 
-### A different visualization! 
+### Prices around April
 
-```{r box_3}
+```{r box_5}
+calendar %>%
+    group_by(date) %>%
+    filter(month(date)==4, day(date)>15, day(date)<25)%>%
+    summarise(avg_price = mean(price))
+```
+
+### 
+
+The evolution of the price around Boston is really straightforward, as there is a normal rise of the average price in the summer. However, there is a weird pike around the end of April, that wecan identify more precisely by selecting the right period of time, from April 17th to April 20th.
+
+There seems to be somthing really interesting happening there, and we might be able to learn more about the location by checking the neighbourhoods where the rise is the steepest.
+
+
+Column {data-width=500}
+-----------------------------------------------------------------------
+
+### Variation of the prices around April
+
+We can see that the prices within the different neighbourhoods vary very differently around that time.
+
+By selecting only Mission Hill, we can see that this neighbourhood is probably very interesting to go around that time. Actually, this spot is on the course of the Boston 2020 marathon, which might be an explanation for it. (see next tab)
+
+### Variation of the different neighbourhood prices
+
+```{r box_7}
 # Put the code for a supporting visualization here. This visualization should add context and nuance, but expect the main visualization to convey the bulk of your message. 
 
 # This is not a good visualization -- always remember to include titles and legends. Make yours better! 
@@ -97,23 +122,45 @@ calendar %>%
 	filter(n > 100) %>%
 	ggplot() +
 	aes(x = date, y = price, color = neighbourhood) + 
-	geom_line() + 
-	guides(color = FALSE)
+	geom_line()+
+    guides(color = FALSE)+
+    theme(aspect.ratio=0.5)
 ```
 
+# Mission Hill Overview
 
-# A Second Tab
+```{r box_6}
+# Put the code for a supporting visualization here. This visualization should add context and nuance, but expect the main visualization to convey the bulk of your message. 
 
+# This is not a good visualization -- always remember to include titles and legends. Make yours better! 
 
-Column {data-width=650}
------------------------------------------------------------------------
+neighbourhood_lookup <- listings %>% 
+	select(id, neighbourhood)
 
-### Box 1
+calendar %>% 
+	left_join(neighbourhood_lookup, by = c('listing_id' = 'id')) %>% 
+    filter(neighbourhood == "Mission Hill") %>%
+	group_by(neighbourhood, date) %>% 
+	summarise(price = mean(price), n = n()) %>% 
+	filter(n > 100) %>%
+	ggplot() +
+	aes(x = date, y = price, color = neighbourhood) + 
+	geom_line()+
+    theme(aspect.ratio=0.5)
+```
 
-Your dashboard is allowed to have multiple tabs! Only use it if you need it. 
+# Users location reviews
 
-Column {data-width=350}
------------------------------------------------------------------------
+```{r box}
 
-### Box 2
+listings %>%
+  left_join(calendar,
+            by = c('id' = 'listing_id'))%>%
+  group_by(neighbourhood) %>%
+  summarise(avg_scores_location = mean(review_scores_location, na.rm = T), number_locations=n()) %>%
+  arrange((desc(avg_scores_location)), desc(number_locations))%>%
+  head(5)
 
+```
+
+Above, we would recommend Financial District and the Government Center. According to the average score location given by the renters. As there are many equal to 10, the maximum, we discriminate by the number of locations, which describes the weigh of the meaning of these scores. 
